Fix academic type error and layout formatting bugs.
Fixes the problem of showing the correct academic type
on the client payment page upon page load. Additionally,
fixes up layout bugs for both desktop and mobile devices.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -139,11 +139,6 @@ input[type="text"], button, textarea, select, span, input[type="password"], inpu
 }
 
 .select-option, .select2 {
-  position: relative;
-  cursor: pointer;
-  height: 50px;
-  overflow: hidden;
-  margin-bottom: 24px;
 }
 
 .select-option i, .select2 i {
